...
    <string name="sobre_sidemenu">Sobre</string>

    <string name="navigation_drawer_open">Abrir navigation drawer</string>
    <string name="navigation_drawer_close">Fechar navigation drawer</string>

    <string name="action_settings">Configurações</string>
    <string name="action_salvar">Salvar</string>
    <string name="action_editar">Editar</string>
    <string name="action_deletar">Deletar</string>

    <!-- MAIN ACTIVITY -->
    <string name="tab_hoje">Hoje</string>
    <string name="tab_semana">Semana</string>
...
    <string name="texto_sem_clientes">Você ainda não tem nenhum cliente cadastrado</string>

    <!-- CADASTRO CLIENTES ACTIVITY -->
    <string name="title_activity_cadastro_clientes">Cadastro de Cliente</string>
    <string name="label_nome">Nome</string>
    <string name="label_endereco">Endereço</string>
    <string name="novo_endereco"><u>+ Adicionar endereço</u></string>
    <string name="label_telefone">Telefone</string>
    <string name="novo_telefone"><u>+ Adicionar telefone</u></string>
    <string name="label_email">E-mail</string>
    <string name="novo_email"><u>+ Adicionar e-mail</u></string>
    <string name="cliente_salvo_sucesso">Cliente salvo com sucesso</string>
    <string name="cliente_atualizado_sucesso">Cliente atualizado com sucesso</string>
    <string name="erro_nome">Insira o nome do cliente</string>
    <string name="erro_nome_invalido">Insira um nome válido</string>
    <string name="erro_endereco_invalido">Insira um endereço válido</string>
    <string name="erro_telefone_invalido">Insira um telefone válido</string>
    <string name="erro_email_invalido">Insira um e-mail válido</string>
    <string name="banner_ad_cadastro_cliente">ca-app-pub-8736689435854328/7778681597</string>

    <!-- CADASTRO CONTATO ACTIVITY -->
    <string name="title_activity_cadastro_contato">Cadastro de contato</string>
    <string name="label_data">Data do contato</string>
    <string name="label_descricao">Descrição do contato</string>
...
