<?xml version="1.0" encoding="utf-8"?>
<EditText xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/generated_telefone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="phone"
    />
